--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -4,6 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.andryyu.rxjavademo.generate.GenerateActivity">
+    tools:context="com.andryyu.rxjavademo.rxjava2.GenerateActivity">
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_operation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
